kustomize/overlays/beta/tffk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-okonomi-regnskap
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix( `/okonomi/regnskap`) && Headers(`x-org-id`, `tffk.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-okonomi-regnskap
          port: 8080
